--- a/me/report/public/css/style.css
+++ b/me/report/public/css/style.css
@@ -1,5 +1,7 @@
 /**
  * The stylesheet for this website.
  */
- @import "header.css";
- @import "main.css";
+@import "header.css";
+@import "main.css";
+@import "nav.bar.css";
+@import "init.css";
