--- a/me/report/public/css/header.css
+++ b/me/report/public/css/header.css
@@ -22,7 +22,7 @@
  * Position and size the logo.
  */
 .header .logo {
-    width: 130px;
+    width: 120px;
 
     position: relative;
     top: 5px;
@@ -33,8 +33,9 @@
  * Modify and position the title.
  */
 .header .title {
+    font-style: Arial, Helvetica, sans-serif;
     color: var(--dark-color);
-    font-size: 36px;
+    font-size: 46px;
     text-shadow: 2px 2px 2px var(--medium-color);
 
     position: relative;
