--- a/me/report/public/css/byline.css
+++ b/me/report/public/css/byline.css
@@ -18,6 +18,11 @@
     padding-top: 2em;
 }
 
+.byline p {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: gray;
+}
+
 /** figure.css */
 
 .figure.left {
