--- a/me/report/public/css/header.css
+++ b/me/report/public/css/header.css
@@ -33,7 +33,8 @@
  * Modify and position the title.
  */
 .header .title {
-    font-style: Arial, Helvetica, sans-serif;
+    font-style: italic;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: var(--dark-color);
     font-size: 46px;
     text-shadow: 2px 2px 2px var(--medium-color);
