--- a/me/report/public/css/footer.css
+++ b/me/report/public/css/footer.css
@@ -25,10 +25,11 @@
 .footer a {
     color: #ee8b5e;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-shadow: 2px 2px 2px var(--medium-color);
 }
 
 .footer a:hover {
-    color: rgb(70, 226, 205);
+    color: rgb(179, 255, 208);
     text-decoration: none;
 }
 
