--- a/me/report/public/css/header.css
+++ b/me/report/public/css/header.css
@@ -67,7 +67,7 @@
     border-bottom: 4px solid var(--dark-color);
     position: relative;
 
-    background-image: url("../img/water01.png");
+    background-image: url("../img/hom.png");
     background-repeat: no-repeat;
     /* background-attachment: fixed; */
     background-position: center;
