--- a/me/report/public/css/main.css
+++ b/me/report/public/css/main.css
@@ -22,17 +22,22 @@
     padding-right: 1.5em;
 }
 
-.article h1 {
+.main .article h1 {
     font-size: 2em;
+    color: lightsalmon;
     border-bottom: 4px double #dadada;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .main .article h3 {
-    color: crimson;
+    color: rgb(33, 128, 216);
     font-size: 5em;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-shadow: 2px 2px 2px var(--medium-color);
+}
+
+h3 {
+    text-align: center;
 }
 
 .article .author {
@@ -58,4 +63,11 @@
     padding-left: 2em;
     padding-right: 1.5em;
 }
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
 
