--- a/me/report/public/css/today.css
+++ b/me/report/public/css/today.css
@@ -1,4 +1,5 @@
-.main p{
+.main h3{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: coral;
+    text-align: center;
 }
