--- a/me/report/public/css/main.css
+++ b/me/report/public/css/main.css
@@ -41,7 +41,7 @@ h3 {
 }
 
 .main .article h4 {
-    color: aquamarine;
+    color: #ff7fa1;
     font-size: 4em;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-shadow: 2px 2px 2px #af7dc1;
